--- a/Thermory.Web/Views/SalesOrder/Index.cshtml
+++ b/Thermory.Web/Views/SalesOrder/Index.cshtml
@@ -33,7 +33,7 @@
             ],
             columns: [
                 {
-                    field: 'OrderNumberString', caption: 'Order Number', size: '20%', sortable: true, resizable: true, render: 'text'
+                    field: 'OrderNumber', caption: 'Order Number', size: '20%', sortable: true, resizable: true, render: 'text'
                 },
                 {
                     field: 'CustomerName', caption: 'Customer', size: '20%', sortable: true, resizable: true, render: 'text'
