--- a/Thermory.Web/Views/Shared/Order/_CustomerSelector.cshtml
+++ b/Thermory.Web/Views/Shared/Order/_CustomerSelector.cshtml
@@ -1,19 +1,25 @@
 ﻿@model Thermory.Web.Models.OrderForm
 
-<div class="form-inline">
-    <div class="form-group">
-        <label for="customerId">Customer</label>
-        <select id="customerId" class="form-control" onchange="customerChanged();">
-            <option value="@Guid.Empty" selected="selected">Add New</option>
-            @foreach (var customer in Model.Customers)
-            {
-                var selected = customer.Id == Model.Order.CustomerId ? " selected=\"selected\"" : "";
-                <option value="@customer.Id" @selected>@customer.Name</option>
-            }
-        </select>
-        <input type="text" id="customerName" class="form-control" />
-    </div>
-</div>
+<table>
+    <tr>
+        <td>
+            <label for="customerId">Customer</label>
+        </td>
+        <td>
+            <select id="customerId" class="form-control" onchange="customerChanged();">
+                <option value="@Guid.Empty" selected="selected">Add New</option>
+                @foreach (var customer in Model.Customers)
+                {
+                    var selected = customer.Id == Model.Order.CustomerId ? " selected=\"selected\"" : "";
+                    <option value="@customer.Id" @selected>@customer.Name</option>
+                }
+            </select>
+        </td>
+        <td>
+            <input type="text" id="customerName" class="form-control" />
+        </td>
+    </tr>
+</table>
 
 <script type="text/javascript">
     $(document).ready(function () {
