Simplified packs fraction and refactored duplicate code.

--- a/Thermory.Web/Views/Shared/Order/_Form.cshtml
+++ b/Thermory.Web/Views/Shared/Order/_Form.cshtml
@@ -14,7 +14,7 @@
 }
 
 <h3><strong>@title</strong></h3>
-<div id="errorPanel" class="alert alert-danger" role="alert" style="display: none;">
+<div id="errorPanel" class="alert alert-danger" role="alert" style="display: none; margin-top: 14px;">
     <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
     <span class="sr-only">Error:</span>
     <span id="errorMessage"></span>
