Completed edit and delete order logic based on statuses. Inventory adjustments are only applied to sales orders and incoming orders that are in the received status.

--- a/Thermory.Web/Views/Shared/Order/Form.cshtml
+++ b/Thermory.Web/Views/Shared/Order/Form.cshtml
@@ -147,6 +147,8 @@
             OrderNumber: orderNumber,
             OrderTypeId: '@Model.Order.OrderType.Id',
             OrderType: getOrderType(),
+            OrderStatusId: '@Model.Order.OrderStatusId',
+            OrderStatus: getOrderStatus(),
             Customer: getCustomer(),
             PackagingType: getPackagingType()
         };
@@ -232,6 +234,13 @@
                 Id: $('#packagingTypeId').val(),
                 Name: name
             };
+    }
+
+    function getOrderStatus() {
+        return {
+            Id: '@Model.Order.OrderStatus.Id',
+            Name: '@Model.Order.OrderStatus.Name'
+        };
     }
 
     function getOrderType() {
