--- a/Thermory.Web/Views/Shared/Order/Review.cshtml
+++ b/Thermory.Web/Views/Shared/Order/Review.cshtml
@@ -8,11 +8,59 @@
     var controller = string.Format("{0}Order", orderType);
 }
 
-<h3><strong>@orderType Order @Model.Order.OrderNumber</strong></h3>
+<h3>
+    <strong>@orderType Order @Model.Order.OrderNumber</strong>
+    @if (Model.Order.OrderStatus.OrderStatusEnum == OrderStatuses.Deleted)
+    {
+        <span class="label label-danger"><span class="glyphicon @Model.Order.OrderStatus.GlyphiconClass"></span> @Model.Order.OrderStatus.Name</span>
+    }
+</h3>
 @if (@Model.Order.Customer != null)
 {
     <h4>@Model.Order.Customer.Name</h4>
 }
+<table>
+    <tr>
+        @foreach (var status in Model.OrderStatuses.Where(s => s.SortOrder > 0))
+        {
+            if (status.SortOrder <= Model.Order.OrderStatus.SortOrder)
+            {
+                <td style="text-align: center;"><span class="glyphicon glyphicon-ok-circle glyphicon-success"></span></td>
+            }
+            else if (status.SortOrder == Model.Order.OrderStatus.SortOrder + 1)
+            {
+                <td style="text-align: center;"><span class="glyphicon glyphicon-download glyphicon-warning"></span></td>
+            }
+            else
+            {
+                <td style="text-align: center;"><span class="glyphicon glyphicon-ban-circle glyphicon-default"></span></td>
+            }
+        }
+    </tr>
+    <tr>
+        @foreach (var status in Model.OrderStatuses.Where(s => s.SortOrder > 0))
+        {
+            if (status.SortOrder <= Model.Order.OrderStatus.SortOrder)
+            {
+                <td>
+                    <span class="label label-success"><span class="glyphicon @status.GlyphiconClass"></span> @status.Name</span>
+                </td>
+            }
+            else if (status.SortOrder == Model.Order.OrderStatus.SortOrder + 1)
+            {
+                <td>
+                    <span class="label label-warning"><span class="glyphicon @status.GlyphiconClass"></span> @status.Name</span>
+                </td>
+            }
+            else
+            {
+                <td>
+                    <span class="label label-default"><span class="glyphicon @status.GlyphiconClass"></span> @status.Name</span>
+                </td>
+            }
+        }
+</tr>
+</table>
 <div>
     <br>
     @if (Model.Order.OrderStatus.OrderStatusEnum != OrderStatuses.Deleted)
@@ -24,10 +72,10 @@
             <span class="glyphicon glyphicon-trash"></span> Delete
         </div>
     }
-<div type="button" class="btn btn-info" onclick="window.location = ('@Url.Action("Index", controller)');">
-    <span class=" glyphicon glyphicon-arrow-left"></span> Back
-</div>
-<br><br>
+    <div type="button" class="btn btn-info" onclick="window.location = ('@Url.Action("Index", controller)');">
+        <span class=" glyphicon glyphicon-arrow-left"></span> Back
+    </div>
+    <br><br>
 </div>
 <div id="worksheetPanel">
     <ul class="nav nav-tabs" data-tabs="tabs">
